# Ronny-the-station-chef

./: .gitignore  README.md  download_from_ronny.py  go.mod  models.py  pyproject.toml  ranny.py  requirements.txt  ronny.py  seed.py  station.py
ansible/: Makefile  README.md  Vagrantfile  ansible.cfg  hosts.ini  playbook.yml  requirements.yml  reset.yml  test-station.sh
ansible/files/: gonny-collector.service  gonny-spreader.service  ronny  ronny.service  station  station.service
cases/: README.md  converter_case_switch.scad  converter_case_usb.scad
cmds/collector/: main.go
cmds/emulator/: main.go
cmds/spreader/: main.go
database/: crud.py  database.py  models.py  schemas.py
internal/ble_scanner/: scanner.go
internal/db/: db.go  models.go
internal/wshandlers/: writer.go
src/: ronny.py  seed.py  station.py
src/database/: crud.py  database.py  models.py
