[tool.poetry]
name = "ronny-the-station-chef"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
SQLAlchemy = "^2.0.23"
scapy = "^2.5.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
orjson = "^3.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
